main menu hover color contrast fix

--- a/docroot/themes/custom/casella/css/custom/recycle-better.css
+++ b/docroot/themes/custom/casella/css/custom/recycle-better.css
@@ -149,7 +149,7 @@ Author URI: http://www.adworkshop.com
 }
 
 .resources-nav ul li a:hover {
-  color: #888;
+  color: #767676;
 }
 
 /* ======================================================= */
